# FAQChatbot

./: .dockerignore  .env.example  .gitignore  Dockerfile  README.md  entrypoint.sh  pyproject.toml  railway.json  requirements.txt
.github/workflows/: ingest.yml
docs/: chunking-embedding-architecture.md  deployment-plan.md  edgecase.md  problemStatement.md  rag-architecture.md
ingest/: README.md  __init__.py  prune_old_runs.py  repo_dotenv.py
ingest/phases/: __init__.py
ingest/url_registry/: urls.yaml
runtime/: README.md  __init__.py
runtime/phase_5_retrieval/: README.md  __init__.py  __main__.py  chroma_access.py  config.py  embed_query.py  pipeline.py  preprocess.py  retrieve.py  types.py
runtime/phase_6_generation/: README.md  __init__.py  __main__.py  allowlist.py  config.py  groq_llm.py  pack_context.py  pipeline.py  prompts.py  types.py  validate_output.py
runtime/phase_7_safety/: README.md  __init__.py  __main__.py  config.py  pipeline.py  post_validate.py  privacy.py  refusal.py  router.py  types.py
runtime/phase_8_threads/: __init__.py  __main__.py  chat_service.py  config.py  expand_query.py  store.py  store_memory.py  store_sqlite.py  types.py
runtime/phase_9_api/: __init__.py  __main__.py  app.py  config.py  schemas.py  test_api.py
scripts/: run-ingest-local.sh
web/: .env.local.example  .gitignore  README.md  package-lock.json  package.json  railway.json  tailwind.config.ts
web/app/: globals.css  layout.tsx  page.tsx
web/components/: ApiConfigBanner.tsx  ChatApp.tsx  ChatMainPanel.tsx  ComposerForm.tsx  DebugPanel.tsx  HeaderBar.tsx  (+6 more)
(+59 files in other folders)
