[build-system]
requires = ["setuptools>=61"]
build-backend = "setuptools.build_meta"

[project]
name = "mf-faq-ingest"
version = "0.1.0"
description = "MF FAQ assistant: ingest pipeline + runtime retrieval (docs/rag-architecture.md)"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "python-dotenv>=1.0.0",
    "requests>=2.31.0",
    "PyYAML>=6.0.1",
    "beautifulsoup4>=4.12.0",
    "sentence-transformers>=3.0.0",
    "transformers>=4.40.0,<4.45.0",
    "torch>=2.2.0",
    "chromadb>=1.5.7",
    "groq>=0.4.0",
    "fastapi>=0.115.0",
    "uvicorn[standard]>=0.32.0",
]

[tool.setuptools.packages.find]
where = ["."]
include = ["ingest*", "runtime*"]
